[추가] HTTP 프로토콜 기반 Springboot HTTP - ELK 연동 예제 추가

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,4 @@
-
+elasticsearch.host=192.168.200.115
+elasticsearch.port=9300
+elasticsearch.cluster_name=docker-cluster
+spring.main.allow-bean-definition-overriding=true
